Now THIS is the best Version of me!

--- a/Data_Analysis_Intro/Untitled.ipynb
+++ b/Data_Analysis_Intro/Untitled.ipynb
@@ -386,7 +386,7 @@
     }
    ],
    "source": [
-    "df.AveragePrice.head() #nobody uses this notation - jus"
+    "df.AveragePrice.head() #nobody uses this notation - just be aware it exist"
    ]
   },
   {
